# Hyper-Trees

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  hypertree.tif  pyproject.toml
.github/scripts/: install_osx_dependencies.sh
.github/workflows/: claude-code-review.yml  claude.yml  release.yml  unit-tests.yml
examples/: Basic Walkthrough.ipynb  Forecast Intervals.ipynb  HPO.ipynb  TSB Intermittent Demand.ipynb  VAR Models.ipynb  metrics.py  utils.py
experiments/: README.md  models.py  repro.py  requirements-experiments.txt  utils.py
experiments/Air Passengers/: fcsts.csv
experiments/Australian Retail Turnover/: fcsts.csv  params.csv
experiments/Rossmann Store Sales/: params.csv
experiments/datasets/airpassengers/: config_local.py  dataset_source.txt  meta.json  test.parquet  train.parquet
experiments/datasets/auselectricity/: config_global.py  config_local.py  dataset_source.txt  meta.json  meta_ets.json  test.parquet  test_padded.parquet  train.parquet  train_padded.parquet
experiments/datasets/ausretail/: config_global.py  config_local.py  dataset_source.txt  meta.json  test.parquet  train.parquet
experiments/datasets/m3_monthly/: config_global.py  dataset_source.txt  meta.json  test.parquet  train.parquet
experiments/datasets/m3_yearly/: config_global.py  dataset_source.txt  meta.json  meta_ets.json  test.parquet  test_padded.parquet  train.parquet  train_padded.parquet
experiments/datasets/m5_agg/: config_global.py  dataset_source.txt  meta.json  test.parquet  train.parquet
experiments/datasets/rossmann/: config_global.py  dataset_source.txt  meta.json  test.parquet  train.parquet
experiments/datasets/tourism_monthly/: config_global.py  config_local.py  dataset_source.txt  meta.json  meta_ets.json  test.parquet  test_padded.parquet  train.parquet  train_padded.parquet
experiments/runs/: fcst_evaluation.ipynb
experiments/runs/notebooks/: embedding_ablation.ipynb  embedding_visualization.ipynb  example_forecasts.ipynb  global_deeplearning.ipynb  global_ets.ipynb  global_hypertrees.ipynb  global_lgbm.ipynb  local_classical.ipynb  stl.ipynb  (+15 more)
hypertrees/: __init__.py  conformal.py  utils.py
hypertrees/models/: HyperTreeAR.py  HyperTreeARMA.py  HyperTreeETS.py  HyperTreeNetAR.py  HyperTreeNetARMA.py  HyperTreeNetVAR.py  HyperTreeSTL.py  HyperTreeTSB.py  HyperTreeVAR.py  __init__.py  _var_base.py  mlp.py
tests/: test_conformal.py  test_hypertree_ar.py  test_hypertree_arma.py  test_hypertree_ets.py  test_hypertree_net_ar.py  test_hypertree_net_arma.py  test_hypertree_stl.py  test_hypertree_tsb.py  test_hypertree_var.py  test_mlp.py  test_utils.py
